# csv-term-tagger

./: README.md  csv_term_tagger.toml  pyproject.toml  term_tagger.bat
src/csv_term_tagger/: json_schema_str.py  main.py
