[project]
name = "csv-term-tagger"
version = "0.1.0"
description = "Checks CSV column for search terms and adds tags in a seperate column when found. Creates a new CSV."
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["jsonschema>=4.25.0", "pytz>=2025.2", "rich>=14.1.0"]

[dependency-groups]
dev = ["genson>=1.3.0", "nox-uv>=0.6.2"]

[project.scripts]
csv_term_tagger = "csv_term_tagger.main:main"
